Button Text for icons is shown when CSS is turned off. THis is done as 508 fix.for this Added invisibleButtonText to CSS
git-svn-id: svn+ssh://subversion.telligen.com/var/www/html/repos/cmat/trunk/Development/mat@2272 de2f59c9-771b-4d1d-97da-b950f46c8601

Former-commit-id: f959ea64bcddd899fd0e0135616ef29f8ee805d7

--- a/war/Mat.css
+++ b/war/Mat.css
@@ -1223,11 +1223,37 @@ padding: 2px;
 .readOnlyButton {
     background: url("images/hborder.png") repeat-x scroll 0 -27px transparent;
     border: 1px outset #CCCCCC;
-    font-size: small;
+    font-size: 0;
     margin: 0;
     padding: 3px 5px;
     text-decoration: none;
 }
+.invisibleButtonText{
+  margin: 0;
+  padding: 3px 5px;
+  text-decoration: none;
+  font-size: 0;
+  cursor: pointer;
+  cursor: hand;
+  background: url("images/hborder.png") repeat-x 0px -27px;
+  border: 1px outset #ccc;
+	
+}
+
+.invisibleButtonText:active {
+  border: 1px inset #ccc;
+}
+.invisibleButtonText:hover {
+  border-color: #9cf #69e #69e #7af;
+}
+.invisibleButtonText[disabled] {
+  cursor: default;
+  color: #888;
+}
+.invisibleButtonText[disabled]:hover {
+  border: 1px outset #ccc;
+}
+
 /* =SKIPLIST CODE AND =508 COMPLIANCE  */
 /*_____________________________________________________________
 .skiplist {margin: 0 0 0 5px; padding: 0} 
